# hello-vulkan-cpp

./: CMakeLists.txt
shaders/fragment/: color.frag
shaders/vertex/: triangle.vert
src/: main.cpp  uniform.h  vertex.cpp  vertex.h
